fixing photos scroll/centereing on mobile#6

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ footer {
     margin: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     border-radius: 5px;
-    transition: transform 0.3s ease-in-out;
+    /* transition: transform 0.3s ease-in-out; */
 }
 
 .gallery img:hover {
